alterando a versao do parcel

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.14.4",
-    "parcel": "file:.2.8.0",
+    "parcel": "^2.8.0",
     "sharp": "^0.33.5"
   }
 }
