--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.14.4",
-    "parcel": "^2.8.0",
-    "sharp": "^0.33.5"
+    "parcel": "^2.14.4",
+    "sharp": "^0.33.5",
+    "svgo": "^3.3.2"
   }
 }
